2章の修正